--- a/NutshellRepo/wwwroot/Site/css/LayoutStyle.css
+++ b/NutshellRepo/wwwroot/Site/css/LayoutStyle.css
@@ -76,7 +76,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 230px;
-    /*display:none;*/ /*check if is logged in*/
 }
 
 
@@ -90,6 +89,8 @@
     height: 21px;
     width: 178px;
 }
+
+
 
 #userPanelWrapper {    
     height: 21px;
@@ -115,26 +116,49 @@
 }
 
 
-
-#envelope {
-    position:relative;
-    top:-10px;
+#userAndMsgs form {
+    position: relative;
     display: inline-block;
-    color: rgb(160,160,170);    
-    /*color:wheat;*/ /*this will be needed when cheking for unread messages*/
+    height: 16px;
+    width: 16px;
+}
+
+#userAndMsgs button {
+    position: absolute;
+    display: inline-block;
+    margin: 0;
+    top: -8px;
+    left: 0;
+    border: none;
     text-decoration: none;
     outline: none;
-    transition: 0.3s;
 }
-    #envelope:hover {
-        color: rgba(240,240,250,0.6);
-        transform: scale(1.1);
-    }
 
-    #envelope:active {        
-        text-shadow: none;
-        color: rgba(0,0,0,0.4);
-    }
+#envelope {
+    position:absolute;
+    left:0;
+    top:0;
+    display: inline-block;
+    color: rgb(160,160,170);   
+    transition:0.3s;
+}
+
+
+#envelope:hover {
+    color: rgba(240,240,250,0.6);
+    transform: scale(1.1);
+}
+
+
+
+#userAndMsgs form button:active #envelope {
+    text-shadow: none;
+    color: rgba(0,0,0,0.3) !important; 
+    top: 1px;
+}
+
+
+
 
 
 #logInOut {    
@@ -150,7 +174,9 @@
     background-color: rgba(255,255,255,0.6);
     text-decoration:none;
     border-radius:5px 5px 0 0;
+    border:none;
     transition: all 0.3s;
+    padding-bottom:3px;
 }
 
     #logInOut:hover {
@@ -229,7 +255,7 @@
 }
 
 /* Side navigation menu links */
-.sidenav a {
+.sidenav a, #loginA {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     outline: none;
@@ -240,8 +266,15 @@
     transition: 0.3s;
 }
 
+#loginA {
+    background-color:transparent;
+    border:none;
+    width:150px;    
+    text-align:left;
+}
 
-.sidenav a:hover {
+
+.sidenav a:hover, #loginA:hover {
     color: #f1f1f1;
 }
 
@@ -282,10 +315,12 @@
         width: 220px;
     }
 
-    #envelope {
-        float:right;
-        top:-5px;
+    #userAndMsgs form {
+        float: right;
+        top: 4px;
     }
+
+
 
     #createNutshellDiv {
         grid-area: b;
@@ -299,6 +334,181 @@
     }
 }
 
+
+
+/*=====modal=====*/
+
+.myInputGroup {
+    height: auto;
+    width: 240px;
+    margin: 20px auto;
+}
+
+
+.myInputField {
+    background-color: whitesmoke;
+    border: 2px solid #17a2b8;
+}
+
+
+
+#modalTintDiv {
+    display: none;    
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.6);
+    padding: 120px 15px 0 15px;    
+}
+
+
+
+/*======login======*/
+
+.loginDiv {
+    margin: 10px auto;
+    max-width: 400px;
+    width:auto;
+    background-color: rgb(40,40,50);
+    background-image: url("/Site/images/logoTransparent.svg");
+    background-position: top;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+    box-shadow: 0 0 3px whitesmoke;
+    height: auto;
+    padding-top: 10px;
+}
+
+#loginDivModal {
+    max-width: 300px;    
+}
+
+.animate {
+    -webkit-animation: animatezoom 0.4s;
+    animation: animatezoom 0.4s
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0.5)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0.5)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+
+
+
+#closeModalBtn {
+    color:wheat;
+    display:block;
+    outline: none;
+    position:relative;
+    margin-top:-10px;
+    margin-right:5px;
+}
+
+#checkBoxDiv {
+    height: 38px;
+    position: relative;
+    margin: 20px auto 0 auto;
+    border-bottom: 2px solid rgb(80,80,80);
+    border-radius: 4px;
+    padding: 0 5px 0 5px;
+}
+
+#checkLbl {
+    margin-top: 5px;
+}
+
+#checkbox {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 25px;
+    -webkit-appearance: none;
+    outline: none;
+    background-color: rgb(80,80,80);
+    border-radius: 3px;
+    transition: background-color 400ms ease-out;
+    box-shadow: inset 0 0 3px black;
+    border: 2px solid rgb(80,80,80);
+}
+
+    #checkbox:checked {
+        background-color: #847265;
+    }
+
+    #checkbox::before {
+        text-align: right;
+        text-shadow: 0 0 2px black,0 0 2px black;
+        padding-right: 2px;
+        content: '.';
+        color: black;
+        line-height: 2px;
+        position: absolute;
+        width: 24px;
+        height: 15px;
+        top: 2.5px;
+        left: 2px;
+        border-radius: 3px;
+        border: 2px solid rgb(40,40,50);
+        background-color: rgb(40, 80, 160);
+        box-shadow: inset 0 0 3px rgba(0,0,0,0.8);
+        transition: 200ms ease-out;
+    }
+
+    #checkbox:checked::before {
+        color: wheat;
+        background-color: rgb(20,130,255);
+        left: 30px;
+    }
+
+
+#rememberMe {
+    display: inline;
+    position: relative;
+    top: -6px;
+    margin-left: 60px;
+    text-decoration: none;
+    border-bottom: 1px dashed darkgrey;
+}
+
+
+
+#logInBtn {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    letter-spacing: 1px;
+    width: 100%;
+    border-radius: 0;
+    padding: 10px 0px;
+}
+
+    #logInBtn:active {
+        box-shadow: none;
+    }
 
 
 
@@ -329,6 +539,7 @@
 }
 
 .footer-links {
+    cursor: default;
     margin-top: 10px;
     box-shadow: 0 0 10px black;
     background-color: rgb(40, 40, 50);
