worked on view inbox list
all data is pulled through ajax in partialviews, message previews funtionalities, buttons and pagination and UX

--- a/NutshellRepo/Views/Shared/_Layout.cshtml
+++ b/NutshellRepo/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
                                 <div id="userNameStringDiv">
                                     <a asp-action="ViewProfile" asp-controller="User" asp-route-username="@User.Identity.Name" id="userNameString" title="View Profile">@User.Identity.Name</a>
                                 </div>
-                                <form asp-action="ViewInbox" asp-controller="User" method="post">
-                                    <button type="submit">
+                                <form asp-action="ViewInbox" asp-controller="User" method="get">
+                                    <button type="submit" id="messagesHeaderBtn">
                                         <i class="fas fa-envelope fa-1x" id="envelope" title="Messages"></i>
                                     </button>
                                 </form>
