preparing for read msg functionalities

--- a/NutshellRepo/Views/User/ReadMessage.cshtml
+++ b/NutshellRepo/Views/User/ReadMessage.cshtml
@@ -12,6 +12,9 @@
     <h5>From: </h5> <a asp-controller="User" asp-action="ViewProfile" asp-route-UserName="Dam1rann" id="userName" >pupsiK</a>
 </div>
 
+<div id="repliedTo">
+    <h5>Replied To: </h5> <a asp-controller="User" asp-action="ReadMessage" asp-route-UserName="repliedMsgId" id="userName">replied msg string</a>
+</div>
 
 
 <div class="mt-4" id="mediaContainer">
