--- a/NutshellRepo/Views/User/ViewInbox.cshtml
+++ b/NutshellRepo/Views/User/ViewInbox.cshtml
@@ -28,6 +28,10 @@
             Home
         </a>
 
+        <a asp-action="ViewInbox" asp-controller="User" class="btn btn-secondary btn_refresh">
+            <i class="fas fa-sync"></i>           
+        </a>
+
         <button type="button" class="btn btn-secondary deleteBtn" onclick="onDelete()">
             <i class="far fa-trash-alt"></i>
             Delete
