--- a/NutshellRepo/wwwroot/Site/css/User.css
+++ b/NutshellRepo/wwwroot/Site/css/User.css
@@ -418,12 +418,20 @@
 .container_outer_messages div .deleteBtn:active,
 .container_outer_messages div .deleteBtn:focus,
 .container_outer_messages div .homePageBtn:active,
-.container_outer_messages div .homePageBtn:focus {
+.container_outer_messages div .homePageBtn:focus,
+.btn_refresh:active,
+.btn_refresh:focus{
     box-shadow: none !important;
     color: black !important;
 }
 
-
+.btn_refresh {
+    /*background-color: rgba(100,100,100,0.1);*/
+    background-color: transparent;
+    border:none;
+    color: rgb(180,180,180);
+    box-shadow:inset 0 0 5px wheat;
+}
 
 
 /*.container_inner_messages div button i{
@@ -580,9 +588,7 @@
     width:200px;
 }
 
-/*thead {
-    height: 39.5px;
-}*/
+
 
 .messages_Div_Message_body {
     font-size: 40px;
@@ -590,7 +596,7 @@
     font-weight: 700;
     font-style: italic;
     margin-top: 130px;
-    cursor:default;
+    cursor: default;
 }
 
 #messagesNumber {
