--- a/NutshellRepo/Views/User/_InboxEmptyPartial.cshtml
+++ b/NutshellRepo/Views/User/_InboxEmptyPartial.cshtml
@@ -3,4 +3,4 @@
 </div>
 
 <input name="pageNumber" type="hidden" value="-1" />
-          
+<input name="numberOfMessages" type="hidden" value="" />
