--- a/NutshellRepo/Views/Shared/_Layout.cshtml
+++ b/NutshellRepo/Views/Shared/_Layout.cshtml
@@ -42,10 +42,11 @@
                                 <div id="userNameStringDiv">
                                     <a asp-action="ViewProfile" asp-controller="User" asp-route-username="@User.Identity.Name" id="userNameString" title="View Profile">@User.Identity.Name</a>
                                 </div>
-                                <form asp-action="ViewInbox" asp-controller="User" method="get">
+                                <form asp-action="ViewInbox" asp-controller="User" method="post">
                                     <button type="submit" id="messagesHeaderBtn">
                                         <i class="fas fa-envelope fa-1x" id="envelope" title="Messages"></i>
                                     </button>
+                                    @*@Html.AntiForgeryToken()*@
                                 </form>
                             </div>
                             <form asp-action="logout" asp-controller="account" method="post">
