--- a/NutshellRepo/Views/User/PersonalCabinet.cshtml
+++ b/NutshellRepo/Views/User/PersonalCabinet.cshtml
@@ -43,7 +43,7 @@
         <div class="container_inner_profile_buttons">
 
 
-            <form asp-action="ViewInbox" asp-controller="User" method="get">
+            <form asp-action="ViewInbox" asp-controller="User" method="post">
                 <button class="btn btn-secondary profile_button" type="submit">
                     <i class="fas fa-envelope fa-1x mr-3"></i>Messages Inbox
                 </button>
